--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,4 @@ version = "0.1.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+ToeplitzMatrices = "c751599d-da0a-543b-9d20-d0a503d91d24"
