--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "FermionXYModel"
+name = "FermionXYModels"
 uuid = "19fd5c17-81b1-4921-a398-53333efd3594"
 authors = ["JaydevSR <jaydevsr7701@gmail.com>"]
 version = "0.1.0"
